@@ -26,12 +26,13 @@
 
 class RObject;
 class QTextEdit;
-class QCloseEvent;
+class QTabWidget;
 class QLabel;
 class QPushButton;
+class RObjectViewerWidget;
 
 /**
-An extremely simple object viewer. You pass it an object in the constructor. It will extract some information and display that as text, then call R "print (object)" and display the result. You don't need to store a pointer. The window will self-destruct when closed.
+A simple object viewer. You pass it an object in the constructor. It will extract some information and display that as text.
 
 @author Thomas Friedrichsmeier
 */
@@ -41,30 +42,78 @@ public:
 	~RObjectViewer ();
 
 	RObject *object () { return _object; };
+
+	enum ViewerPage {
+		SummaryPage = 0,
+		PrintPage = 1
+	};
 public slots:
-	void cancel ();
-	void update ();
-	void toggleSummary ();
-	void togglePrint ();
+	void currentTabChanged (int new_current);
 protected:
 	friend class RKWorkplace;
-	RObjectViewer (QWidget *parent, RObject *object);
+	RObjectViewer (QWidget *parent, RObject *object, ViewerPage initial_page = SummaryPage);
 
-	void rCommandDone (RCommand *command);
-	void closeEvent (QCloseEvent *e);
 	void objectRemoved (RObject *object);
 private:
 	QLabel *status_label;
 	QLabel *description_label;
-	QPushButton *update_button;
-	QPushButton *cancel_button;
-	QPushButton *toggle_summary_button;
-	QPushButton *toggle_print_button;
-	QTextEdit *print_area;
-	QTextEdit *summary_area;
-	QString caption;
+	QTabWidget* tabs;
+	RObjectViewerWidget* summary_widget;
+	RObjectViewerWidget* print_widget;
 
 	RObject *_object;
+};
+
+/** Since the two widgets in the RObjectViewer are largely similar, this is the common base for them. The base class itself is *not* useful.
+
+@author Thomas Friedrichsmeier */
+class RObjectViewerWidget : public QWidget, public RCommandReceiver {
+Q_OBJECT
+protected:
+	RObjectViewerWidget (QWidget* parent, RObject* object);
+	virtual ~RObjectViewerWidget ();
+public:
+	void objectKilled () { _object = 0; };
+
+	void invalidate (const QString& reason);
+	void initialize ();
+	void setText (const QString& text);
+public slots:
+	void cancel ();
+	virtual void update ();
+protected:
+	void rCommandDone (RCommand *command);
+	void ready ();
+
+	QLabel* status_label;
+
+	QPushButton *update_button;
+	QPushButton *cancel_button;
+	QTextEdit *area;
+
+	bool initialized;
+
+	RObject* _object;
+};
+
+/** Represents the "summary" area in an RObjectViewer */
+class RObjectSummaryWidget : public RObjectViewerWidget {
+public:
+	RObjectSummaryWidget (QWidget* parent, RObject* object) : RObjectViewerWidget (parent, object) {};
+	~RObjectSummaryWidget () {};
+
+	/** reimplemented from RObjectViewerWidget to call "summary" */
+	void update ();
+};
+
+/** Represents the "print" area in an RObjectViewer */
+class RObjectPrintWidget : public RObjectViewerWidget {
+public:
+	RObjectPrintWidget (QWidget* parent, RObject* object) : RObjectViewerWidget (parent, object) {}
+	~RObjectPrintWidget () {};
+
+	/** reimplemented from RObjectViewerWidget to call "print" */
+	void update ();
 };
 
 #endif
